manage div>>id,class

--- a/WebAnime/OP/scss/main.css
+++ b/WebAnime/OP/scss/main.css
@@ -3,18 +3,22 @@ body {
   background-color: lightgoldenrodyellow;
 }
 
-div {
+#root {
   margin: auto;
   width: 50%;
 }
 
-div h1 {
+#root h1 {
   border-bottom: solid;
   padding-bottom: 5px;
 }
 
+#root .main {
+  margin-top: 10px;
+}
+
 @media screen and (max-width: 480px) {
-  div {
+  #root {
     width: 100%;
   }
 }
