--- a/WebAnime/OP/index.jade
+++ b/WebAnime/OP/index.jade
@@ -6,5 +6,9 @@ html(lang="ja")
         link(rel="stylesheet" href="scss/main.css")
         link(rel="stylesheet" href="scss/annime.css")
     body
-        div
-            h1 起床
+        #root
+            h1 TITLE
+            .main
+                h2 INDEX
+                p DATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATA
+
