--- a/WebAnime/OP/scss/main.scss
+++ b/WebAnime/OP/scss/main.scss
@@ -14,6 +14,12 @@ body{
     }
     .main{
         margin-top: 10px;
+        h2{
+            padding-top: 12px;
+        }
+        p{
+            word-break: break-all;
+        }
     }
 }
 
