--- a/WebAnime/OP/index.jade
+++ b/WebAnime/OP/index.jade
@@ -4,11 +4,10 @@ html(lang="ja")
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width,initial-scale=1.0")
         link(rel="stylesheet" href="scss/main.css")
-        link(rel="stylesheet" href="scss/annime.css")
+        link(rel="stylesheet" href="scss/anime.css")
     body
         #root
             h1 TITLE
             .main
                 h2 INDEX
                 p DATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATA
-
