--- a/WebAnime/OP/scss/main.scss
+++ b/WebAnime/OP/scss/main.scss
@@ -14,7 +14,7 @@ body{
 #root{
     margin: auto;
     width: 50%;
-    @include smartphone(){
+    @include smartphone {
         width: 100%;
     }
     h1{
@@ -27,6 +27,7 @@ body{
             padding-top: 12px;
         }
         p{
+            margin: 0 auto;
             word-break: break-all;
         }
     }
