--- a/WebAnime/OP/scss/anime.scss
+++ b/WebAnime/OP/scss/anime.scss
@@ -1,15 +1,36 @@
 @charset "utf-8";
 
-$light:lightgoldenrodyellow;
-$dark: #111;
-
-@keyframes darkdissolve{
+@keyframes fadein {
+    0%{
+        opacity: 0;
+    }
     100%{
-        background-color: $dark;
+        opacity: 1;
     }
 }
-@keyframes lightdissolve{
-    100%{
-        background-color: $light;
+@keyframes fadeout {
+    0%{
+        opacity: 1;
     }
+    100%{
+        opacity: 0;
+    }
+}
+@keyframes leftslide{
+    0%{
+        transform: translateX(-60vw);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+
+.fadein{
+    animation: fadein 5s;
+}
+.fadeout{
+    animation: fadeout 5s;
+}
+.leftslide{
+    animation: leftslide 4s ease-out;
 }
