--- a/WebAnime/OP/index.jade
+++ b/WebAnime/OP/index.jade
@@ -3,11 +3,14 @@ html(lang="ja")
     head
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width,initial-scale=1.0")
-        link(rel="stylesheet" href="scss/main.css")
-        link(rel="stylesheet" href="scss/anime.css")
+        link(rel="stylesheet" href="./scss/main.css")
+        link(rel="stylesheet" href="./scss/anime.css")
     body
         #root
             h1 TITLE
             .main
                 h2 INDEX
-                p DATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATA
+                p.fadein DATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATADATA
+                p.leftslide Hello!
+                img(src="img/window.jpg", alt="")
+        script(src="./src/anime.js") 
