add bootstrap columns

--- a/WebAnime/tiktok/index.jade
+++ b/WebAnime/tiktok/index.jade
@@ -4,5 +4,9 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width,initial-scale=1.0")
         link(rel="stylesheet", href="./css/bootstrap.min.css")
-    body 
+    body
+        .container 
+            .row.justify-content-center
+                .col-12.col-sm-8.col-md-4
+                    h1 Hello
         script(src="./js/bootstrap.bundle.min.js") 
