--- a/WebAnime/tiktok/index.jade
+++ b/WebAnime/tiktok/index.jade
@@ -4,9 +4,15 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width,initial-scale=1.0")
         link(rel="stylesheet", href="./css/bootstrap.min.css")
+        link(rel="stylesheet", href="./css/main.css")
     body
-        .container 
+        .container-fluid
             .row.justify-content-center
-                .col-12.col-sm-8.col-md-4
-                    h1 Hello
+                .col-12.col-sm-8.col-lg-4.bg-light.border-start.border-end.border-secodary.bg-bottom
+                    nav.navbar.navber-expand-lg.navbar-dark.bg-dark.my-4
+                        .container-fluid
+                            a.navbar-brand.h1 TikTok
+                    .px-3
+                        h4 発覚
+                        p.text-wrap.mb-0 いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。いつものように開く
         script(src="./js/bootstrap.bundle.min.js") 
