--- a/WebAnime/tiktok/css/main.css
+++ b/WebAnime/tiktok/css/main.css
@@ -1,3 +1,8 @@
-.bg-bottom{
-    height: 100vh;
+.bg-bottom__0 {
+  height: 100vh;
 }
+
+.logo-width__20 {
+  width: 20%;
+}
+/*# sourceMappingURL=main.css.map */
