--- a/WebAnime/tiktok/index.jade
+++ b/WebAnime/tiktok/index.jade
@@ -8,11 +8,13 @@ html
     body
         .container-fluid
             .row.justify-content-center
-                .col-12.col-sm-8.col-lg-4.bg-light.border-start.border-end.border-secodary.bg-bottom
+                .col-12.col-sm-8.col-lg-4.bg-light.border-start.border-end.border-secodary.bg-bottom__0
                     nav.navbar.navber-expand-lg.navbar-dark.bg-dark.my-4
                         .container-fluid
                             a.navbar-brand.h1 TikTok
                     .px-3
                         h4 発覚
-                        p.text-wrap.mb-0 いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。いつものように開く
+                        p.text-wrap いつものように何気なくスマホを手に取る。何も考えなくともTikTokに手が行く。
+                        .text-center
+                            img.img-fluid.logo-width__20.loading(src="./img/tiktok-logo.png")
         script(src="./js/bootstrap.bundle.min.js") 
