--- a/WebAnime/tiktok/css/anime.scss
+++ b/WebAnime/tiktok/css/anime.scss
@@ -1,8 +1,14 @@
-@keyframes fadein {
-    0%{
-        opacity: 0;
+@keyframes douyin {
+    50%{
+        transform: scale(1.2,1.2);
     }
     100%{
-        opacity: 1;
+        transform: scale(1,1);
     }
+}
+
+.douyin{
+    animation-name: douyin;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
 }
