add javascript audio control

--- a/Ghost/index.jade
+++ b/Ghost/index.jade
@@ -4,13 +4,13 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width,initial-scale=1.0")
         link(rel="stylesheet", href="./css/bootstrap.min.css")
+        link(rel="icon" href="./favicon.png" type="image/png" sizes="16*16")
     body 
         .container-fluid
             .row.justify-content-center 
-                .col-12.col-sm-8.col-lg-4.text-wrap
-                    .navbar.navbar-expand-lg.navbar-light.bg-light
-                        .container-fluid 
-                            a.navbar-brand Reac
-                    p.fs-1 どうもみなさんこんにちは。このサイトの運用者の#####です
+                .col-12.col-sm-8.col-lg-4.text-break.text-center
+                    p.fs-1.mt-5 404
+                    p.fs-2 Not Found
+                    button.btn.btn-outline-secondary#trap(type="button") Return
         script(src="./js/jquery-3.6.0.min.js") 
         script(src="./js/main.js") 
