--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -3,8 +3,16 @@ html
     head 
         meta(charset="utf-8")
         meta(name="viewport",content="width=device-width,initial-scale=1.0")
+        link(rel="stylesheet", href="css/bootstrap.min.css")
+        link(rel="stylesheet", href="css/main.css")
+        link(rel="stylesheet", href="css/anime.css")
         title PBT 
-    body 
-        script(src="https://unpkg.com/react@17/umd/react.development.js" crossorigin) 
-        script(src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin) 
+    body.bg-secondary.text-center
+        .container-fluid
+            .row.justify-content-center
+                .col-12.col-sm-10.col-md-8.col-lg-6.border-start.border-end.border-success.text-light.bg-dark#root
+                    #game
+                    #text
+        script(src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin) 
+        script(src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin) 
         script(src="src/game.js") 
