--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -6,13 +6,15 @@ html
         link(rel="stylesheet", href="css/bootstrap.min.css")
         link(rel="stylesheet", href="css/main.css")
         link(rel="stylesheet", href="css/anime.css")
+        -var center = ["d-flex","align-items-center","justify-content-center"];
         title PBT 
     body.bg-secondary.text-center
         .container-fluid
             .row.justify-content-center
                 .col-12.col-sm-10.col-md-8.col-lg-6.border-start.border-end.border-success.text-light.bg-dark#root
-                    #game
-                    #text
+                    #game(class=center)
+                    #text(class=center)
         script(src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin) 
         script(src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin) 
+        script(src="src/jquery-3.6.0.min.js") 
         script(src="src/game.js") 
