--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -14,7 +14,7 @@ html
                 .col-12.col-sm-10.col-md-8.col-lg-6.border-start.border-end.border-success.text-light.bg-dark#root
                     #game(class=center)
                     #text(class=center)
-        script(src="src/react.production.min.js" crossorigin) 
-        script(src="src/react-dom.production.min.js" crossorigin) 
+        script(src="src/react.production.min.js") 
+        script(src="src/react-dom.production.min.js") 
         script(src="src/jquery-3.6.0.min.js") 
         script(src="src/game.js") 
