add template js

--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -17,4 +17,5 @@ html
         script(src="src/react.production.min.js") 
         script(src="src/react-dom.production.min.js") 
         script(src="src/jquery-3.6.0.min.js") 
+        script(src="src/template.js")
         script(src="src/game.js") 
