--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -14,8 +14,5 @@ html
                 .col-12.col-sm-10.col-md-8.col-lg-6.border-start.border-end.border-success.text-light.bg-dark#root
                     #game(class=center)
                     #text(class=center)
-        script(src="src/react.production.min.js") 
-        script(src="src/react-dom.production.min.js") 
-        script(src="src/jquery-3.6.0.min.js") 
-        script(src="src/template.js")
-        script(src="src/game.js") 
+        script(src="vue/vue@2.js")
+        script(src="vue/game.js")  
