--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -14,5 +14,5 @@ html
                 .col-12.col-sm-10.col-md-8.col-lg-6.border-start.border-end.border-success.text-light.bg-dark#root
                     #game(class=center)
                     #text(class=center)
-        script(src="vue/vue@2.js")
+        script(src="vue/vue@next")
         script(src="vue/game.js")  
