--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -13,6 +13,6 @@ html
             .row.justify-content-center
                 .col-12.col-sm-10.col-md-8.col-lg-6.border-start.border-end.border-success.text-light.bg-dark#root
                     #game(class=center)
-                    #text(class=center)
-        script(src="vue/vue@next")
-        script(src="vue/game.js")  
+                    #text(class=center) {{ text }}
+        script(src="https://unpkg.com/vue@next")
+        script(src="vue/game.js")
