vue => js directory

--- a/pbt/index.jade
+++ b/pbt/index.jade
@@ -15,4 +15,4 @@ html
                     #game(class=center)
                     #text(class=center) {{ text }}
         script(src="https://unpkg.com/vue@next")
-        script(src="vue/game.js")
+        script(src="js/game.js")
