--- a/pbt/public/css/anime.css
+++ b/pbt/public/css/anime.css
@@ -23,3 +23,49 @@
 .fade-in {
     animation: fade-in 3s;
 }
+/*フェードアウト*/
+@keyframes fade-out {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+@-webkit-keyframes fade-out {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+.fade-out {
+    animation: fade-out 3s;
+}
+/*フェードイン-アウト*/
+@keyframes fade-in-out {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+@-webkit-keyframes fade-in-out {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+.fade-in-out {
+    animation: fade-in-out 6s;
+}
